<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coolbackground"
    android:fillViewport="true"
    tools:context="com.example.android.myquizapp.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:fontFamily="casual"
            android:paddingBottom="25dp"
            android:paddingTop="40dp"
            android:text="@string/lets_learn_screen"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lesson1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_btn"
            android:fontFamily="casual"
            android:text="@string/lesson1_button"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lesson2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lesson1"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_btn"
            android:fontFamily="casual"
            android:text="@string/lesson2_button"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lesson3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lesson2"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_btn"
            android:fontFamily="casual"
            android:text="@string/lesson3_button"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lesson3"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_btn"
            android:fontFamily="casual"
            android:text="@string/back_to_home_screen"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>