<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coolbackground"
    android:fillViewport="true"
    tools:context="com.example.android.myquizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:fontFamily="casual"
            android:paddingTop="40dp"
            android:text="@string/intro_home_screen"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro"
            android:layout_centerInParent="true"
            android:background="#7F000000"
            android:fontFamily="casual"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/paragraph_home_screen"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paragraph"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_btn"
            android:fontFamily="casual"
            android:text="@string/rules_home_screen"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rules"
            android:layout_centerInParent="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_btn"
            android:fontFamily="casual"
            android:text="@string/play_game_home_screen"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>
